[workspace]
members = ["libraries/*"]
resolver = "2"

[package]
name = "uno-hal"
version = "0.1.0"
authors = ["FrozenyDark <dmitriy.steshenko@gmail.com>"]
edition = "2021"

[[bin]]
name = "uno-hal"
test = false
bench = false

[dependencies]
uno-hal-macro = { path = "./libraries/uno-hal-macro" }
uno-hal-registers = { path = "./libraries/uno-hal-registers" }

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
